# Cub3D

./: CMakeLists.txt  Makefile  README.md  cub3D  map.cub
minilibx_mms/: Makefile  mlx_init.swift
src/: bmp.c  check_map.c  cub3d.c  cub3d.h  draw.c  draw_more.c  drawsprite.c  freewin.c  getsprite.c  key.c  move.c  parse.c  parseparams.c  parsing_utils.c  parsingmap.c  screen.c  screen_more.c  splitmap.c  tools.c
textures/: column.xpm  lamp.xpm
