cmake_minimum_required(VERSION 3.17)
project(cub3d C)

set(CMAKE_C_STANDARD 11)

include_directories(libft)
include_directories(minilibx_mms)
include_directories(src)

add_executable(cub3d
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line_utils.c
        libft/libft.h
        minilibx_mms/font.c
        minilibx_mms/mlx.h
        minilibx_mms/mlx_png.c
        minilibx_mms/mlx_rgb.c
        minilibx_mms/mlx_string_put.c
        minilibx_mms/mlx_xpm.c
        src/bmp.c
        src/check_map.c
        src/cub3d.c
        src/cub3d.h
        src/draw.c
        src/draw_more.c
        src/drawsprite.c
        src/freewin.c
        src/getsprite.c
        src/key.c
        src/move.c
        src/parse.c
        src/parseparams.c
        src/parsing_utils.c
        src/parsingmap.c
        src/screen.c
        src/screen_more.c
        src/splitmap.c
        src/tools.c)
